--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.3.3</version>
+    </dependency>
 
 
-	</dependencies>
+  </dependencies>
 
 	<build>
 		<plugins>
